feat: uploading image with data by controller and multer
